# autopost_telegram_vk_max

./: .gitignore  README.md  alembic.ini  autopost_sync_alternatives_ru.md  docker-compose.yml  output_vk_app_edit.html  output_vk_app_edit_chunk.js  pyproject.toml  test_vk_photo_post.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_delivery_queue_production.py  0003_platform_settings_encrypted.py  0004_route_canonical_refs.py
app/: config.py  dependencies.py  main.py
app/adapters/: base.py  common.py  definitions.py  registry.py  schema.py
app/api/: adapter_instances.py  dashboard.py  health.py  help.py  platform_settings.py  routes.py  rules.py  vk_auth.py  webhooks.py
app/db/: models.py  session.py
app/domain/: enums.py  errors.py  models.py  policies.py
app/help/: registry.py
app/middleware/: request_logging.py
app/repositories/: adapter_instances_repo.py  base.py  dashboard_repo.py  delivery_jobs_repo.py  message_links_repo.py  platform_accounts_repo.py  platform_settings_repo.py  processed_events_repo.py  routes_repo.py  rules_repo.py
app/schemas/: api.py
app/services/: adapter_instances_service.py  adapter_runtime.py  dedup_service.py  delivery_service.py  ingress_service.py  lease_heartbeat.py  lineage_service.py  platform_settings_service.py  policy_service.py  queue_service.py  retry_policy.py  routing_service.py  sync_service.py  transform_service.py  vk_oauth.py  vk_oauth_pages.py
app/utils/: chat_refs.py  crypto.py  hashing.py  (+2 more)
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  INSTALLATION.md  QUICKSTART.md  README.md
(+70 files in other folders)
